--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
+  "_moduleAliases": {
+    "@db": "dist/db",
+    "@utils": "dist/utils",
+    "@routes": "dist/routes",
+    "@strategies": "dist/strategies"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +25,7 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "module-alias": "^2.2.2",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
